Update Japanese locale to specify 'family'

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -6,7 +6,7 @@ ja:
         female: 女性
         other: その他
       relationship:
-        family: 家族
+        family: 家族・親戚
         friend: 友人
         acquaintance: 知人
         coworker: 同僚
