--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,4 +28,15 @@
 #       enabled: "ON"
 
 en:
-  hello: "Hello world"
+  enums:
+    person:
+      gender:
+        male: male
+        female: female
+        other: other
+      relationship:
+        family: family
+        friend: friend
+        acquaintance: acquaintance
+        coworker: coworker
+        other: other
